--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,5 @@
 Collabtive 0.7
-+ Added a function to reset a password when the user forgot it
++ Added a function to enable a user to reset his/her password when he/she forgot it
 + Added missing e-mail notification function when replying to a message
 + Beautified code of some template files
 
